[package]
name = "cypress-display"
edition = "2024"
version = "0.1.0"

[dependencies]
axum = "0.7"
cedar-elements = { git = "https://github.com/oakamil/cedar-server" }
chrono = "0.4"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8"
linux-embedded-hal = "0.4.0"
pico-args = "0.5.0"
rppal = { version = "0.22.1", features = [ "embedded-hal", "embedded-hal-nb" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"simple-signal = "1"
ssd1351 = { git = "https://codeberg.org/oakamil/ssd1351-rpi.git" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11"
tower-http = { version = "0.5", features = ["fs"] }
u8g2-fonts = { version = "0.7.2", features = ["embedded_graphics_textstyle"] }
